ec2.tf
resource "aws_instance" "terraform" {
  ami = "ami-0735c191cf914754d"
  instance_type = "t2.micro"
  
  tags = {
    Name = "terraform-ec2-instance"
  }
}
